<resources>
    <string name="app_name">Composition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_lego">Welcome lego</string>
    <string name="rule">There are many examples of indeterminate compositions that use rule systems to generate activity. Such work is typically process oriented rather than result oriented: it specifies conditions and constraints as opposed to aims and goals. Rule-based indeterminate compositions require players to negotiate their way through the constraints provided by the rules, making decisions that produce sonic or behavioural outcomes. Games also use rules to limit the actions of their players, but tend to be goal-directed, with players negotiating their way through the constraints provided by the rules to complete a goal, or win-state.</string>
    <string name="understand">Understand</string>
    <string name="choose_level">Choose Level:</string>
    <string name="testvoy">Testvoy</string>
    <string name="sredniy">Sredniy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="question_mark">\?</string>

    <string name="game_over">Game Over</string>
    <string name="score_answers">Vash schot: %s</string>
    <string name="score_percentage">Protsent pravilnix otvetov: %s</string>
    <string name="retry">Poprobovat snova</string>
    <string name="right_answers">Provilnix otvetov %s из %s neobxodimix</string>
    <string name="required_percentage">Neobxodimiy protsent provelnix otvetov: %s</string>
    <string name="required_score">Neobxodimie kolishestvo provilnix otvetov: %s</string>
    <string name="progress_answers">Pravilnix otvetov %s (minimum %s)</string>
    <string name="game_over_finish_fragment">Game Over</string>


</resources>