<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.GameFinishedFragment">

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        android:contentDescription="@string/game_over_finish_fragment"
        app:layout_constraintBottom_toTopOf="@id/tv_required_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/smilling"
        />

    <TextView
        android:id="@+id/tv_required_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/required_score"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tv_score_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/score_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
        app:layout_constraintTop_toBottomOf="@id/tv_required_answer"
        app:layout_constraintStart_toStartOf="@id/tv_required_answer"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answer"/>

    <TextView
        android:id="@+id/tv_required_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answer"
        app:layout_constraintStart_toStartOf="@id/tv_required_answer"
        app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
        android:text="@string/required_percentage"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tv_score_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/score_percentage"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answer"
        app:layout_constraintStart_toStartOf="@id/tv_required_answer"
        app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
        />
    
    <Button
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>